tests/NormalTests/paczka1/fuzzy1/84539410.err
Error in line 5: 4fdn6E S861 34,0
Error in line 3: rfyCd7i S861 85,1
Error in line 6: 4fdn6E S342 0,6
Error in line 14: N2Q9pX S861 39,30
Error in line 21: LhT S861 65,9
